fix relative urls

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <table id="epicGamesTable" class="display" style="width:100%"></table>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-    <script src="renderTable.js"></script>
+    <script src="/EpicFreeGamesList/renderTable.js"></script>
 </body>
 </html>
